RESOLVED FIXED71147
IndexedDB: get EventQueue from ScriptExecutionContext instead of Document
https://bugs.webkit.org/show_bug.cgi?id=71147
Summary IndexedDB: get EventQueue from ScriptExecutionContext instead of Document
David Grogan
Reported 2011-10-28 15:17:41 PDT
IndexedDB: get EventQueue from ScriptExecutionContext instead of Document
Attachments
Patch (5.27 KB, patch)
2011-10-28 15:34 PDT, David Grogan
no flags
David Grogan
Comment 1 2011-10-28 15:34:45 PDT
Hans Wennborg
Comment 2 2011-10-31 09:44:45 PDT
LGTM
David Grogan
Comment 3 2011-10-31 11:03:29 PDT
Nate, could you review this? It's vaguely related to the IndexedDB security bug we dealt with a few months ago.
WebKit Review Bot
Comment 4 2011-11-01 16:33:21 PDT
Comment on attachment 112925 [details] Patch Clearing flags on attachment: 112925 Committed r99011: <http://trac.webkit.org/changeset/99011>
WebKit Review Bot
Comment 5 2011-11-01 16:33:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.