IndexedDB: get EventQueue from ScriptExecutionContext instead of Document https://bugs.webkit.org/show_bug.cgi?id=71147

When IDB is used from a worker thread ScriptExecutionContext will
be a WorkerContext, not a Document.  This was the impetus behind
moving EventQueue into ScriptExecutionContext in r98656.

Reviewed by Nate Chapin.

No new tests. No new functionality yet.

* storage/IDBDatabase.cpp:
(WebCore::IDBDatabase::close):
(WebCore::IDBDatabase::enqueueEvent):
* storage/IDBRequest.cpp:
(WebCore::IDBRequest::abort):
(WebCore::IDBRequest::enqueueEvent):
* storage/IDBTransaction.cpp:
(WebCore::IDBTransaction::enqueueEvent):


Canonical link: https://commits.webkit.org/87611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99011 268f45cc-cd09-0410-ab3c-d52691b4dbfc